--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "webpack": "^3.9.1"
   },
   "dependencies": {
+    "chart.js": "^2.7.1",
     "matter-js": "^0.14.0",
     "p2": "^0.7.1"
   }
